--- a/frontend/ai-voice--app/src/App.css
+++ b/frontend/ai-voice--app/src/App.css
@@ -12,6 +12,43 @@
 --color-blue-900: oklch(0.379 0.146 265.522);
 --color-blue-950: oklch(0.282 0.091 267.935);
 
+--color-green-50: oklch(0.982 0.018 155.826);
+--color-green-100: oklch(0.962 0.044 156.743);
+--color-green-200: oklch(0.925 0.084 155.995);
+--color-green-300: oklch(0.871 0.15 154.449);
+--color-green-400: oklch(0.792 0.209 151.711);
+--color-green-500: oklch(0.723 0.219 149.579);
+--color-green-600: oklch(0.627 0.194 149.214);
+--color-green-700: oklch(0.527 0.154 150.069);
+--color-green-800: oklch(0.448 0.119 151.328);
+--color-green-900: oklch(0.393 0.095 152.535);
+--color-green-950: oklch(0.266 0.065 152.934);
+
+
+--color-emerald-50: oklch(0.979 0.021 166.113);
+--color-emerald-100: oklch(0.95 0.052 163.051);
+--color-emerald-200: oklch(0.905 0.093 164.15);
+--color-emerald-300: oklch(0.845 0.143 164.978);
+--color-emerald-400: oklch(0.765 0.177 163.223);
+--color-emerald-500: oklch(0.696 0.17 162.48);
+--color-emerald-600: oklch(0.596 0.145 163.225);
+--color-emerald-700: oklch(0.508 0.118 165.612);
+--color-emerald-800: oklch(0.432 0.095 166.913);
+--color-emerald-900: oklch(0.378 0.077 168.94);
+--color-emerald-950: oklch(0.262 0.051 172.552);
+
+--color-teal-50: oklch(0.984 0.014 180.72);
+--color-teal-100: oklch(0.953 0.051 180.801);
+--color-teal-200: oklch(0.91 0.096 180.426);
+--color-teal-300: oklch(0.855 0.138 181.071);
+--color-teal-400: oklch(0.777 0.152 181.912);
+--color-teal-500: oklch(0.704 0.14 182.503);
+--color-teal-600: oklch(0.6 0.118 184.704);
+--color-teal-700: oklch(0.511 0.096 186.391);
+--color-teal-800: oklch(0.437 0.078 188.216);
+--color-teal-900: oklch(0.386 0.063 188.416);
+--color-teal-950: oklch(0.277 0.046 192.524);
+
 --color-slate-300: oklch(0.869 0.022 252.894);
 --color-slate-500: oklch(0.554 0.046 257.417);
 --color-slate-900: oklch(0.208 0.042 265.755);
